log
CXX src/love/gfx.cpp
In file included from src/love/gfx.cpp:32:
src/love/video.h:39:1: error: expected class-name before ‘{’ token
   39 | {
      | ^
compilation terminated due to -Wfatal-errors.
make: *** [Makefile:31: src/love/gfx.o] Error 1
